[gd_scene load_steps=11 format=2]

[ext_resource path="res://MultiPlayer/lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/LoadingSheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/menu1.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.0666667, 0.266667, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.294118 )
margin_right = 1278.0
margin_bottom = 683.0
color = Color( 0, 0, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 640, 360 )
scale = Vector2( 3.90625, 3.75 )
frames = SubResource( 7 )

[node name="NameTextBox" type="LineEdit" parent="."]
margin_left = 68.0
margin_top = 444.0
margin_right = 318.0
margin_bottom = 468.0
rect_min_size = Vector2( 250, 0 )
text = "Enter Name"
align = 1

[node name="JoinBtn" type="Button" parent="."]
margin_left = 993.0
margin_top = 516.0
margin_right = 1214.0
margin_bottom = 620.0
text = "Join Game"
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="text_changed" from="NameTextBox" to="." method="_on_NameTextBox_text_changed"]
[connection signal="pressed" from="JoinBtn" to="." method="_on_JoinBtn_pressed"]
